# xpress

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/: test_readme_code.py
.github/workflows/: test_suite.yml
benchmark/: CMakeLists.txt  benchmark_expression.hpp  common.hpp  compare.py  expression_differentiation.cpp  expression_evaluation.cpp
cmake/: adac-config.cmake.in  xpress-config.cmake.in
src/adac/: adac.hpp  bindings.hpp  concepts.hpp  derivatives.hpp  dtype.hpp  eval.hpp  expression.hpp  expression_interfaces.hpp  expression_traits.hpp  expressions.hpp  linalg.hpp  operators.hpp  symbols.hpp  tensor.hpp  traits.hpp  utils.hpp  values.hpp
src/adac/solvers/: common.hpp  newton.hpp
src/xpress/: bindings.hpp  concepts.hpp  derivatives.hpp  dtype.hpp  expressions.hpp  linalg.hpp  operators.hpp  symbols.hpp  tensor.hpp  traits.hpp  type_traits.hpp  utils.hpp  values.hpp  xp.hpp
src/xpress/linalg/: tensor.hpp
src/xpress/operators/: add.hpp  common.hpp  det.hpp  divide.hpp  log.hpp  mat_mul.hpp  multiply.hpp  pow.hpp  subtract.hpp
src/xpress/solvers/: common.hpp  newton.hpp
test/: CMakeLists.txt  test_bindings.cpp  test_dtype.cpp  test_expression_stream.cpp  test_linalg.cpp  test_operators.cpp  test_solvers.cpp  test_symbols.cpp  test_tensor.cpp  test_utils.cpp  testing.hpp
